--- a/styles.css
+++ b/styles.css
@@ -16,12 +16,23 @@ body, a:link, a:visited, a:active{
   padding:5px 12px;
   float:right;
 }
+.lineUp {
+  display: inline-block;
+  padding: 5px 12px;
+}
 .topbar{
-  height:32px;
-  background-color: #555;
+  font-family: 'Press Start 2P', cursive;
+  font-size: 7px;
+  height: 25px;
+  background-color:red;
+  color: white;
+}
+.topbar a {
+  color: white;
 }
 .title{
-  background-color: #777;
+  background-color: red;
+  color: green;
 }
 .dancer{
   /* border:10px solid red;
